<resources>
    <!-- Global -->
    <string name="app_name">Coffè</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title">COFFè</string>
    <string name="slogan">Community of Favors</string>

    <!-- Login Activity-->
    <string name="login">SIGN IN</string>
    <string name="recoverPassword">Forgot your password?</string>
    <string name="signup">Don\'t have an account? Sign Up!</string>

    <!-- Forgot Password Activity-->
    <string name="forgotpwdtxt">Type your email below to receive a reset password link.</string>
    <string name="forgotpwdconfirm">SEND</string>

    <!-- Sign-Up Activity -->
    <string name="phoneNumber">Phone Number</string>
    <string name="personName">Name</string>
    <string name="register">Sign Up</string>
    <string name="alreadyRegistered">I already have an account, take me to login</string>

    <!-- Navigation Drawer -->
    <string name="navDrawerOpen">Open Navigation Drawer</string>
    <string name="navDrawerClose">Close Navigation Drawer</string>
    <string name="navDrawerHome">Home</string>
    <string name="navDrawerToDo">Favors to Do</string>
    <string name="navDrawerDone">Done Favors</string>
    <string name="navDrawerRequested">My Favors</string>
    <string name="navDrawerCommunities">Communities</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>

    <!-- Home Activity -->
    <string name="addButton">Add</string>
    <string name="cancelButoon">Cancel</string>

    <!-- Add favour dialog -->
    <string name="addFavourTitle">Title</string>
    <string name="addFavourDescription">Description</string>
    <string name="addFavourDate">Date</string>

    <!-- Communities Activity -->
    <string name="tabMyCommunities">Communities</string>
    <string name="tabAllCommunities">All Communities</string>
    <string name="aceptFavorComunity">CHOOSE A COMMUNITY</string>
    <!-- My Communities Fragment -->
    <string name="createCommunityDialogTitle">Create Community</string>
    <string name="createCommunityDialogMessage">Fill your new Community Data</string>
    <string name="createCommunityDialogPositiveButton">Create</string>
    <string name="createCommunityDialogNegativeButton">Cancel</string>
    <string name="createCommunityDialogCommunityName">Name</string>
    <string name="createCommunityDialogCommunityDescription">Description</string>
    <string name="createCommunityDialogCommunityAddress">Address</string>

    <!-- Picture Descriptions -->
    <string name="loginCoffeeCup">Login Coffee Cup</string>
    <string name="splashScreenHeart">Splash Screen Heart</string>
    <string name="splashScreenCup">Splash Screen Coffee Cup</string>
    <string name="homeAddFavorCup">Add Favor Coffee Cup</string>
    <string name="homeAcceptFavorCup">Accept Favor Coffee Cup</string>
    <string name="profilePicture">Default Profile Picture</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_communities">CommunitiesActivity</string>
    <string name="iconCommunityTitle">Community Title</string>
    <string name="iconCommunityDescription">Community Description</string>
    <string name="iconCommunityAddress">Community Address</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Single Community Activity -->
    <string name="title_activity_single_community">Community</string>
    <string name="tabPostedFavors">Favors</string>
    <string name="tabCommunityMembers">Members</string>
    <string name="tabCommunityInfo">Info</string>
    <!-- Fragment Posted Favors -->
    <!-- Create Favor Dialog-->
    <string name="addFavorDialogTitle">Create a Favor</string>
    <!-- Fragment Community Info -->
    <string name="leaveCommunity">Leave Community</string>
    <string name="tab_text_1">My communities</string>
    <string name="tab_text_2">All the communities</string>
    <string name="titleCA">My communities</string>


    <!-- Activity Profile -->
    <!-- Edit Profile Dialog -->
    <string name="editProfileDialogTitle">Edit your Profile</string>
    <string name="acceptDialogProfile">Edit</string>
    <string name="dismissDialogProfile">Cancel</string>
</resources>
