<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coffe.javie.coffeapp.FragmentCommunityInfo">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tVCommunityTitleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tVAddressInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp" />

    <TextView
        android:id="@+id/tVCommunityDescriptionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp" />

    <ImageView
        android:id="@+id/iVTitleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/iconCommunityTitle"
        android:src="@drawable/ic_title_black_24dp" />

    <ImageView
        android:id="@+id/iVAddressInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/iconCommunityAddress"
        android:src="@drawable/ic_location_on_black_24dp" />

    <ImageView
        android:id="@+id/iVDescriptionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/iconCommunityDescription"
        android:src="@drawable/ic_description_black_24dp" />

    <Button
        android:id="@+id/btnLeaveCommunity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:background="@color/textcolor"
        android:text="@string/leaveCommunity"
        android:textColor="@android:color/background_light" />
</FrameLayout>
