<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.coffe.javie.coffeapp.AddFavorCommunityActivity">

    <Spinner
        android:id="@+id/communitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETDateAddFavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addFavourDate"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETTitleAddFavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addFavourTitle"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETDescriptionAddFavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addFavourDescription"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
</FrameLayout>




