<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="247dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/t"
            android:layout_width="267dp"
            android:layout_height="97dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="25dp"
            android:fontFamily="casual"
            android:text="@string/forgotpwdtxt"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="658dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/MORADO1" />

        <TextView
            android:id="@+id/ttSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:text="@string/forgotpwdconfirm"
            android:textColor="@color/MORADO1"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>