<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETTitleAddCommunity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createCommunityDialogCommunityName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETDescriptionAddCommunity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createCommunityDialogCommunityDescription" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETAddressAddCommunity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createCommunityDialogCommunityAddress" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/ivTitleAddCommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/ic_title_black_24dp" />

    <ImageView
        android:id="@+id/ivDescriptionAddCommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="122dp"
        app:srcCompat="@drawable/ic_description_black_24dp" />

    <ImageView
        android:id="@+id/ivAddressAddCommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="222dp"
        app:srcCompat="@drawable/ic_location_on_black_24dp" />

</RelativeLayout>