<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="50dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETEditPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/personName"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="50dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETEditPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/ic_person_black_24dp"
        android:layout_marginLeft="10dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="122dp"
        app:srcCompat="@drawable/ic_email_black_24dp"
        android:layout_marginLeft="10dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="222dp"
        app:srcCompat="@drawable/ic_phone_black_24dp"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginLeft="10dp" />
</FrameLayout>